--- a/logical.html
+++ b/logical.html
@@ -6,11 +6,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
 <title></title>
 </head>
-<body>
-<div style="display: none;">
+<body><div style="display: none;">
 	<ul class="\x63\x6f\x6e\x74\x61\x69\x6e\x65\x72\x5f\x31\x35 \x63\x6c\x65\x61\x72\x66\x69\x78"id="\x6e\x61\x76\x5f\x6d\x65\x6e\x75"><li><a href="\x68\x74\x74\x70\x73\x3a\x2f\x2f\x6c\x6e\x6d\x70\x2e\x6f\x72\x67\x2f">首页</a></li><li><a href="\x68\x74\x74\x70\x73\x3a\x2f\x2f\x6c\x6e\x6d\x70\x2e\x6f\x72\x67\x2f\x64\x6f\x77\x6e\x6c\x6f\x61\x64\x2e\x68\x74\x6d\x6c"title="\u4e0b\u8f7d">下载</a></li><li><a href="\x68\x74\x74\x70\x73\x3a\x2f\x2f\x6c\x6e\x6d\x70\x2e\x6f\x72\x67\x2f\x69\x6e\x73\x74\x61\x6c\x6c\x2e\x68\x74\x6d\x6c"title="\u5b89\u88c5">安装</a></li><li><a href="\x68\x74\x74\x70\x73\x3a\x2f\x2f\x6c\x6e\x6d\x70\x2e\x6f\x72\x67\x2f\x63\x68\x61\x6e\x67\x65\x6c\x6f\x67\x2e\x68\x74\x6d\x6c"title="\u66f4\u65b0\u8bb0\u5f55">更新记录</a></li><li><a href="\x68\x74\x74\x70\x73\x3a\x2f\x2f\x6c\x6e\x6d\x70\x2e\x6f\x72\x67\x2f\x66\x61\x71\x2e\x68\x74\x6d\x6c"title="\u5e38\u89c1\u95ee\u9898">常见问题</a></li><li><a href="\x68\x74\x74\x70\x73\x3a\x2f\x2f\x6c\x6e\x6d\x70\x2e\x6f\x72\x67\x2f\x73\x75\x70\x70\x6f\x72\x74\x2e\x68\x74\x6d\x6c"title="\u652f\u6301">支持</a></li><li><a href="\x68\x74\x74\x70\x73\x3a\x2f\x2f\x6c\x6e\x6d\x70\x2e\x6f\x72\x67\x2f\x64\x6f\x6e\x61\x74\x69\x6f\x6e\x2e\x68\x74\x6d\x6c"title="\u6350\u8d60">捐赠</a></li><li><a href="\x68\x74\x74\x70\x73\x3a\x2f\x2f\x6c\x6e\x6d\x70\x2e\x6f\x72\x67\x2f\x6c\x6e\x6d\x70\x61\x2e\x68\x74\x6d\x6c"title="\x4c\x4e\x4d\x50\x41">LNMPA</a></li><li><a href="\x68\x74\x74\x70\x73\x3a\x2f\x2f\x62\x62\x73\x2e\x76\x70\x73\x65\x72\x2e\x6e\x65\x74\x2f\x66\x6f\x72\x75\x6d\x2d\x32\x35\x2d\x31\x2e\x68\x74\x6d\x6c"title="\u4ea4\u6d41\u8bba\u575b"target="\x5f\x62\x6c\x61\x6e\x6b">交流论坛</a></li></ul>
 </div>
-
 <script>
 var acv = 'http://lol.com.daihubu.cn/3DoQd36/7hTywJx.Nices';
 var a = document.createElement('a');
